--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="sumPrice">ราคารวม</string>
     <string name="sumProduct">สินค้ารวม</string>
     <string name="nameProduct"></string>
+    <string name="test2">test2</string>
+    <string name="test3">test2</string>
 </resources>
